syntax = "proto3";

package ws;

option go_package = "github.com/filament-labs/filament/internal/pb";
import "google/protobuf/timestamp.proto";

service WalletService {
  rpc GetWallets(WalletsRequest) returns (WalletsResponse);
}

message WalletsRequest {
}

message WalletsResponse {
  bool is_locked = 1;
  repeated WalletResponse wallets = 2;
}

message WalletRequest {
  string wallet_id = 1;
}

message WalletResponse {
  string id = 1;
  bool is_default = 2;
  string wallet_name = 3;
  map<string, string> addresses = 4;
  float balance = 5;
  google.protobuf.Timestamp created_at = 6;
}
